--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto">
-            <h1 class="text-white mb-2 mt-5">Sistema SINI</h1>
+            <h1 class="text-white mb-2 mt-5">Gestion Preventiva </h1>
             <p class="text-lead text-white">
               Sistema de gestión de riesgos. 
             </p>
@@ -59,7 +59,7 @@
                   <label class="form-check-label" for="rememberMe">Remember me</label>
                 </div-->
                 <div class="text-center">
-                  <button type="submit" name="login" class="btn bg-gradient-info w-100 my-4 mb-2">Sign in</button>
+                  <button type="submit" name="login" class="btn btn-primary w-100 my-4 mb-2">Autenticarse</button>
                 </div>
                 <!--div class="mb-2 position-relative text-center">
                   <p class="text-sm font-weight-bold mb-2 text-secondary text-border d-inline z-index-2 bg-white px-3">
