--- a/apps/templates/includes/footer-auth.html
+++ b/apps/templates/includes/footer-auth.html
@@ -1,10 +1,10 @@
 <footer class="footer py-5">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 mb-4 mx-auto text-center">
+      <div class="col-lg-8 mb-4 mx-auto text-center fadeIn1 fadeInBottom">
         <a href="#" 
            target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-          Sobre ArbolSAF
+          Sobre SINI
         </a>
         <a href="#" 
            target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
@@ -16,7 +16,7 @@
         </a>
         <a href="#" 
            target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-          Productos
+          Sitio Defensa
         </a>
         <a href="#" 
            target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
@@ -24,7 +24,12 @@
         </a>          
       </div>
       <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
-        <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
+        <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logo-defensa-civil.png" alt="500-error">
+        
+        <img class="w-30 fadeIn1 fadeInBottom" src="/static/assets/img/logo-sini.png" alt="500-error">
+        <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logo-emergencias.png" alt="500-error">
+        
+        <!--a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
           <span class="text-lg fab fa-dribbble"></span>
         </a>
         <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
@@ -38,11 +43,12 @@
         </a>
         <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
           <span class="text-lg fab fa-github"></span>
-        </a>
+        </a-->
       </div>
     </div>
     <div class="row">
       <div class="col-8 mx-auto text-center mt-1">
+        
         <!--p class="mb-0 text-secondary">
           &copy; <a target="_blank" href="#">Denebinc</a> - desarrollado por Denebinc. 
         </p-->
