cambiando colores y algunos estilos

--- a/apps/static/assets/css/soft-ui-dashboard.css
+++ b/apps/static/assets/css/soft-ui-dashboard.css
@@ -7214,7 +7214,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #064728 !important; }
+  color: #0F4374 !important; }
 
 .text-secondary {
   color: #EF792A !important; }
