--- a/sini/templates/sini/advice/advice_list.html
+++ b/sini/templates/sini/advice/advice_list.html
@@ -247,7 +247,7 @@
                             class="btn btn-light btn-sm">
                       <i class="fa fa-trash"></i>&nbsp;&nbsp;{% trans 'Limpiar filtros' %}
                     </button>
-                    <button form="filter_form" type="submit" class="btn btn-primary btn-sm">
+                    <button form="filter_form" type="submit" class="btn btn-secondary btn-sm">
                       <i class="fa fa-filter"></i>&nbsp;&nbsp;{% trans 'Filtrar' %}
                     </button>
                     <button type="button" class="btn btn-white btn-sm" data-bs-dismiss="modal">
