--- a/sini/templates/sini/api_user/api_user_detail.html
+++ b/sini/templates/sini/api_user/api_user_detail.html
@@ -50,7 +50,7 @@
               <a href="{% url 'sini:api_user_create' %}"
                  class="btn btn-primary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-plus"></i>&nbsp;&nbsp;Crear</a>
               <a href="{% url 'sini:api_user_update' api_user.id %}"
-                 class="btn btn-info btn-large btn-sm m-b-xm mx-1"><i class="fa fa-edit"></i>&nbsp;&nbsp;Editar</a>
+                 class="btn btn-primary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-edit"></i>&nbsp;&nbsp;Editar</a>
               <!--a class="btn btn-danger btn-large btn-sm m-b-xm"><i class="fa fa-edit"></i>&nbsp;&nbsp;Eliminar</a-->
               <button class="btn btn-danger btn-large btn-sm m-b-xm mx-1"
                       id="eliminarB"
