--- a/sini/templates/sini/api_user/api_user_form.html
+++ b/sini/templates/sini/api_user/api_user_form.html
@@ -87,7 +87,7 @@
               </div>
               <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3 d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-save"></i>&nbsp;&nbsp;Guardar</button>
-                <a href="{% url 'sini:api_user_list' %}" class="btn btn-danger btn-large btn-sm m-b-xm mx-1"><i class="fa fa-undo"></i>&nbsp;&nbsp;Cancelar</a>
+                <a href="{% url 'sini:api_user_list' %}" class="btn btn-secondary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-undo"></i>&nbsp;&nbsp;Cancelar</a>
               </div>
             </div>
           </div>
