--- a/sini/templates/sini/incidence/incidence_form.html
+++ b/sini/templates/sini/incidence/incidence_form.html
@@ -78,11 +78,11 @@
                 <button type="submit" class="btn btn-primary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-save"></i>&nbsp;&nbsp;Guardar</button>
                 
                 {% if not incidence.id %}
-                    <a href="{% url 'sini:incidence_list' %}" class="btn btn-danger btn-large btn-sm m-b-xm mx-1"><i class="fa fa-undo"></i>&nbsp;&nbsp;Cancelar</a>
+                    <a href="{% url 'sini:incidence_list' %}" class="btn btn-secondary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-undo"></i>&nbsp;&nbsp;Cancelar</a>
 
                 
                 {% else %}
-                <a href="{% url 'sini:incidence_detail' incidence.id %}" class="btn btn-danger btn-large btn-sm m-b-xm mx-1"><i class="fa fa-undo"></i>&nbsp;&nbsp;Cancelar</a>
+                <a href="{% url 'sini:incidence_detail' incidence.id %}" class="btn btn-secondary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-undo"></i>&nbsp;&nbsp;Cancelar</a>
 
                 {% endif %}
               </div>
