--- a/sini/templates/sini/api_user/api_user_activate.html
+++ b/sini/templates/sini/api_user/api_user_activate.html
@@ -31,7 +31,7 @@
               <h1 class="display-1 text-bolder text-gradient text-danger fadeIn1 fadeInBottom mt-5">Error al activar usuario</h1>
               {% if error == 'invalid_token' %}
               <h2 class="fadeIn3 fadeInBottom opacity-8">El token suministrado no es válido o ha expirado.</h2>
-              <p class="lead opacity-6 fadeIn2 fadeInBottom">Comprueba que ya haya activado su cuenta on anterioridad</p>
+              <p class="lead opacity-6 fadeIn2 fadeInBottom">Comprueba que ya haya activado su cuenta con anterioridad</p>
 
 
               {% elif error == 'user_not_found' %}
