--- a/sini/templates/sini/advice/advice_detail.html
+++ b/sini/templates/sini/advice/advice_detail.html
@@ -119,7 +119,7 @@
             </p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn bg-success" data-bs-dismiss="modal">
+            <button type="button" class="btn bg-success text-white" data-bs-dismiss="modal">
               Cerrar
             </button>
             <button type="button" class="btn bg-danger text-white" id="aceptar">
