--- a/sini/templates/sini/incidence/incidence_detail.html
+++ b/sini/templates/sini/incidence/incidence_detail.html
@@ -114,7 +114,7 @@
                 autocomplete="off">
                 {% csrf_token %}
                   
-                  <button class="btn btn-danger btn-large btn-sm mx-1 mb-0"
+                  <button class="btn btn-secondary btn-large btn-sm mx-1 mb-0"
                     type="submit"
                     id="archivarB"
                     value="archivar">&nbsp;&nbsp;Archivar
@@ -445,7 +445,7 @@
             </p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn bg-success" data-bs-dismiss="modal">
+            <button type="button" class="btn bg-success text-white" data-bs-dismiss="modal">
               Cerrar
             </button>
             <button type="button" class="btn bg-danger text-white" id="aceptar">
