--- a/sini/templates/sini/incidence/incidence_managment.html
+++ b/sini/templates/sini/incidence/incidence_managment.html
@@ -57,7 +57,7 @@
                 <thead>
                   <tr>
                     <td>
-                      <b>Aviso</b>
+                      <b>Nombre</b>
                     </td>
                     <td>
                       <b>Tipo</b>
@@ -136,7 +136,7 @@
             </div>
           </div>
         </div>
-        <div class="card mt-0" id="geo">
+        <div class="card mt-2" id="geo">
           <div class="card-header mb-0">
             <h5 class="mb-0">Incidencias</h5>
           </div>
@@ -146,7 +146,7 @@
                 <thead>
                   <tr>
                     <td>
-                      <b>Incidencia</b>
+                      <b>Nombre</b>
                     </td>
                     <td>
                       <b>ID</b>
@@ -188,6 +188,18 @@
                           </button>
                       </span>
 
+
+                      <span data-bs-toggle="modal" data-bs-target="#sendEmailModal">
+                        <button class="btn btn-link text-primary px-0 mb-0 deletebin mx-2"
+                            id="enviarEmail_{{incidence.id}}"
+                            onclick="clicked_send_incidence(event)"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top" title="Enviar email"
+                            value="{{incidence.id}}">
+                            <i id="archivicon_{{incidence.id}}" class="fa fa-send" aria-hidden="true"></i>
+                        </button>
+                        </span>
+
                       <span data-bs-toggle="modal" data-bs-target="#ArchivarIncidenciaModal">
                         <button class="btn btn-link text-danger text-gradient px-0 mb-0 deletebin mx-2"
                             id="eliminarVariable"
@@ -199,16 +211,6 @@
                         </button>
                         </span>
 
-                        <span data-bs-toggle="modal" data-bs-target="#sendEmailModal">
-                          <button class="btn btn-link text-primary px-0 mb-0 deletebin mx-2"
-                              id="enviarEmail_{{incidence.id}}"
-                              onclick="clicked_send_incidence(event)"
-                              data-bs-toggle="tooltip"
-                              data-bs-placement="top" title="Enviar email"
-                              value="{{incidence.id}}">
-                              <i id="archivicon_{{incidence.id}}" class="fa fa-send" aria-hidden="true"></i>
-                          </button>
-                          </span>
 
                       </td>
                     </tr>
