--- a/sini/templates/sini/warning/warning_detail.html
+++ b/sini/templates/sini/warning/warning_detail.html
@@ -106,7 +106,7 @@
                 autocomplete="off">
                 {% csrf_token %}
                   
-                  <button class="btn btn-danger btn-large btn-sm mx-1 mb-0"
+                  <button class="btn btn-secondary btn-large btn-sm mx-1 mb-0"
                     type="submit"
                     id="archivarB"
                     value="archivar">&nbsp;&nbsp;Archivar
@@ -396,7 +396,7 @@
         <button type="button" class="btn bg-success text-white" data-bs-dismiss="modal">
           Cerrar
         </button>
-        <button type="button" class="btn bg-danger text-white" id="asignarIncidencia">
+        <button type="button" class="btn bg-secondary text-white" id="asignarIncidencia">
           Aceptar
         </button>
       </div>
@@ -445,7 +445,7 @@
     <button type="button" class="btn bg-success text-white" data-bs-dismiss="modal">
       Cerrar
     </button>
-    <button type="button" class="btn bg-danger text-white" id="crearIncidencia">
+    <button type="button" class="btn bg-secondary text-white" id="crearIncidencia">
       Aceptar
     </button>
   </div>
